release-1.2/_sources/install-ihpc-apps.rst.txt
.. _install-ihpc-apps:

Install Other Interactive Apps
==============================

For Jupyter, we provide a tutorial for copying a generic Jupyter batch connect
template and modifying it to work at your center. See
:ref:`app-development-tutorials-interactive-apps-add-jupyter` to install
Jupyter.

.. list-table:: Generic Interactive App Templates
   :header-rows: 1

   * - Name
     - GitHub URL
   * - Jupyter
     - https://github.com/OSC/bc_example_jupyter

While we don't yet provide this for other interactive apps, here is a list of
interactive apps that are currently deployed at OSC and the corresponding OSC
templates.

.. list-table:: OSC Interactive App Templates
   :header-rows: 1

   * - Name
     - GitHub URL
   * - ANSYS Workbench
     - https://github.com/OSC/bc_osc_ansys_workbench
   * - Abaqus/CAE
     - https://github.com/OSC/bc_osc_abaqus
   * - COMSOL Multiphysics
     - https://github.com/OSC/bc_osc_comsol
   * - MATLAB
     - https://github.com/OSC/bc_osc_matlab
   * - Jupyter
     - https://github.com/OSC/bc_osc_jupyter
   * - Jupyter + Spark
     - https://github.com/OSC/bc_osc_jupyter_spark
   * - Paraview
     - https://github.com/OSC/bc_osc_paraview
   * - RStudio Server
     - https://github.com/OSC/bc_osc_rstudio_server

