release-1.8/_sources/install-ihpc-apps.rst.txt
.. _install-ihpc-apps:

Install Other Interactive Apps
==============================

For Jupyter, we provide a tutorial for copying a generic Jupyter batch connect
template and modifying it to work at your center. See
:ref:`app-development-tutorials-interactive-apps-add-jupyter` to install
Jupyter.

.. list-table:: Generic Interactive App Templates
   :header-rows: 1

   * - Name
     - GitHub URL
   * - Jupyter
     - https://github.com/OSC/bc_example_jupyter

While we don't yet provide this for other interactive apps, here is a list of
interactive apps that are currently deployed at OSC and the corresponding OSC
templates. 

.. list-table:: OSC Interactive App Templates
   :header-rows: 1

   * - Name
     - GitHub URL
   * - ANSYS Workbench
     - https://github.com/OSC/bc_osc_ansys_workbench
   * - Abaqus/CAE
     - https://github.com/OSC/bc_osc_abaqus
   * - COMSOL Multiphysics
     - https://github.com/OSC/bc_osc_comsol
   * - MATLAB
     - https://github.com/OSC/bc_osc_matlab
   * - Jupyter
     - https://github.com/OSC/bc_osc_jupyter
   * - Jupyter + Spark
     - https://github.com/OSC/bc_osc_jupyter_spark
   * - Paraview
     - https://github.com/OSC/bc_osc_paraview
   * - RStudio Server
     - https://github.com/OSC/bc_osc_rstudio_server
   * - VMD
     - https://github.com/OSC/bc_osc_vmd
   * - QGIS
     - https://github.com/OSC/bc_osc_qgis
   * - Stata 
     - https://github.com/OSC/bc_osc_stata
    
.. list-table:: University of Utah's CHPC Custom OnDemand Apps
  :header-rows: 1
   
  * - Name
    - GitHub URL
  * - RStudio Server
    - https://github.com/CHPC-UofU/bc_osc_rstudio_server
  * - ANSYS Workbench
    - https://github.com/CHPC-UofU/bc_osc_ansys_workbench
  * - Abaqus/CAE
    - https://github.com/CHPC-UofU/bc_osc_abaqus
  * - COMSOL Multiphysics
    - https://github.com/CHPC-UofU/bc_osc_comsol
  * - Shiny App
    - https://github.com/CHPC-UofU/bc_osc_example_shiny
  * - Jupyter
    - https://github.com/CHPC-UofU/bc_osc_jupyter
  * - Jupyter w/ Dynamic SLURM Partition 
    - https://github.com/CHPC-UofU/bc_jupyter_dynpart
  * - MATLAB
    - https://github.com/CHPC-UofU/bc_osc_matlab

.. list-table:: Stanford Custom OnDemand Apps for Sherlock
   :header-rows: 1
   
   * - Name
     - GitHub URL
   * - sh_jupyter 
     - https://github.com/stanford-rc/sh_ood-apps#sh_jupyter
   * - sh_rstudio
     - https://github.com/stanford-rc/sh_ood-apps#sh_rstudio
   * - sh_tensorboard
     - https://github.com/stanford-rc/sh_ood-apps#sh_tensorboard  

.. list-table:: TechSquareInc Custom Ondemand App
  :header-rows: 1
   
  * - Name
    - GitLab URL
  * - jupyter_experimental
    - https://gitlab.com/mjbludwig/jupyter_experimental
